# gitPractice

./: abc.txt
VisionTools/: .gitignore  CMakeLists.txt  kululu.txt
VisionTools/include/: Evaluation.h
VisionTools/src/: Evaluation.cpp  main.cpp
